first commit to change omegle chat to be chatgpt-based